--- a/arch/arm64/configs/floral_defconfig
+++ b/arch/arm64/configs/floral_defconfig
@@ -735,6 +735,9 @@ CONFIG_XZ_DEC=y
 # Franken/UB 
 #
 CONFIG_IOSCHED_ANXIETY=y
+CONFIG_STUNE_ASSIST=y
+CONFIG_CPUSETS_ASSIST=y
+CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_WAKE_GESTURES=y
 CONFIG_LOCALVERSION=""
 # CONFIG_LOCALVERSION_AUTO is not set
@@ -794,4 +797,3 @@ CONFIG_TOUCHSCREEN_FTS=y
 CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_TRIPNDROID=y
 CONFIG_LD_LLD=y
-CONFIG_BOEFFLA_WL_BLOCKER=y
