--- a/arch/arm64/configs/floral_defconfig
+++ b/arch/arm64/configs/floral_defconfig
@@ -44,8 +44,8 @@ CONFIG_EMBEDDED=y
 CONFIG_PROFILING=y
 CONFIG_JUMP_LABEL=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
-CONFIG_LTO_CLANG=y
-CONFIG_CFI_CLANG=y
+# CONFIG_LTO_CLANG=y
+# CONFIG_CFI_CLANG=y
 CONFIG_SHADOW_CALL_STACK=y
 CONFIG_REFCOUNT_FULL=y
 CONFIG_MODULES=y
@@ -733,13 +733,13 @@ CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_XZ_DEC=y
 #
-# Franken/UB 
+# Franken extras
 #
 CONFIG_STUNE_ASSIST=y
 CONFIG_CPUSETS_ASSIST=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_WAKE_GESTURES=y
-CONFIG_LOCALVERSION=""
+CONFIG_LOCALVERSION="FrankenAqua"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_QCA_CLD_WLAN=y
 CONFIG_QCACLD_WLAN_LFR3=y
