--- a/arch/arm64/configs/floral_defconfig
+++ b/arch/arm64/configs/floral_defconfig
@@ -44,8 +44,8 @@ CONFIG_EMBEDDED=y
 CONFIG_PROFILING=y
 CONFIG_JUMP_LABEL=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
-CONFIG_LTO_CLANG=y
-CONFIG_CFI_CLANG=y
+# CONFIG_LTO_CLANG=y
+# CONFIG_CFI_CLANG=y
 CONFIG_SHADOW_CALL_STACK=y
 CONFIG_REFCOUNT_FULL=y
 CONFIG_MODULES=y
@@ -739,7 +739,7 @@ CONFIG_STUNE_ASSIST=y
 CONFIG_CPUSETS_ASSIST=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_WAKE_GESTURES=y
-CONFIG_LOCALVERSION=""
+CONFIG_LOCALVERSION="FrankenKernel"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_QCA_CLD_WLAN=y
 CONFIG_QCACLD_WLAN_LFR3=y
